# bigint

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/avakar/: bigint.h  cint.h  intn.h
src/: digitizer.h  gcc_traits.cpp  gcc_traits.h  generic_traits.cpp  generic_traits.h  msvc_x86_traits.cpp  msvc_x86_traits.h  traits.h
src/bigint/: bigint.h
src/cint/: README.md  add.h  bitwise.h  cint.h  compare.h  complement.h  digitize.h  digits.h  fwd.h  make.h  mul.h  operators.h  prepend.h  shift.h  strtoc.h  traits.h  trim.h
src/intn/: intn.h
test/: test_bigint.cpp  test_cint.cpp  test_intn.cpp  test_public.cpp
